[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scenes/NPC/NPC_Object_Tween.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NPC/Sprites/Fairy.tex" type="Texture" id=2]
[ext_resource path="res://Scenes/NPC/Sprites/Sparkle.tex" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.0
height = 20.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 26, 26 )

[sub_resource type="Animation" id=3]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=4]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=5]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=6]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=7]

length = 2.25
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 4.76837e-07, 0.15, 0.3, 0.450001, 0.55, 0.65, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 9, 7, 2, 5, 4, 3, 4, 5, 4, 3, 4, 5, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.15, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.75 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fairy_magic_particles"
} ]
}

[sub_resource type="Animation" id=8]

length = 7.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6, 3.75, 3.9, 4.05, 4.2, 4.35, 4.5, 4.65, 4.8, 4.95, 5.1, 5.25, 5.4, 5.55, 5.65, 5.75, 5.85, 6, 6.15, 6.3, 6.45, 6.6, 6.75, 6.9, 7.05, 7.2, 7.35 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 7, 2, 4, 11, 10, 9, 10, 11, 10, 9, 10, 11, 10, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 5.1, 5.25, 5.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 5.85 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fairy_magic_particles"
} ]
}

[sub_resource type="ColorRamp" id=9]

offsets = FloatArray( 0.0584795, 0.350877, 0.77193, 1 )
colors = ColorArray( 0.539062, 0.935181, 1, 1, 0.933742, 0.972656, 0.710495, 1, 0.997375, 1, 0.664062, 1, 1, 0, 0.703125, 1 )

[node name="Forest_Fairy" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 32, 30 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 32, -32 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -3 )
texture = ExtResource( 2 )
centered = false
vframes = 4
hframes = 3
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/face_l = SubResource( 3 )
anims/face_r = SubResource( 4 )
anims/face_u = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/magic_l = SubResource( 7 )
anims/magic_u = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 32, 30 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 32, -32 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Particles2D" type="Particles2D" parent="."]

transform/pos = Vector2( 32, 32 )
config/amount = 30
config/lifetime = 2.25
config/time_scale = 3.0
config/emit_timeout = 1.5
config/emitting = false
config/process_mode = 1
config/offset = Vector2( -15, 8 )
config/half_extents = Vector2( 10, 5 )
config/texture = ExtResource( 3 )
params/direction = 270.0
params/spread = 20.0
params/linear_velocity = 40.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 8.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 45.0
params/initial_size = 0.5
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 0.25
randomness/linear_velocity = 0.25
randomness/spin_velocity = 0.25
randomness/orbit_velocity = 0.25
randomness/initial_angle = 0.25
randomness/hue_variation = 0.1
color/color_ramp = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}


