[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scenes/NPC/NPC_Object_Tween.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NPC/Sprites/Jack.tex" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 18.0
height = 20.0

[sub_resource type="Animation" id=2]

resource/name = "face_l"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]

resource/name = "face_r"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=4]

resource/name = "face_u"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]

length = 14.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 2.2, 4.9, 6.8, 7, 7.5, 7.6, 8.5, 8.7, 9.5, 9.7, 10.7, 12, 12.2, 13, 13.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 6, 7, 1, 2, 1, 3, 4, 3, 4, 1, 4, 3, 4, 1 ]
}

[sub_resource type="Animation" id=6]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]

resource/name = "walk_l"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 4, 5 ]
}

[node name="Forest_Jack" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.80952, 0, 0, 1, -32, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -32, -32 )
texture = ExtResource( 2 )
centered = false
vframes = 4
hframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/face_l = SubResource( 2 )
anims/face_r = SubResource( 3 )
anims/face_u = SubResource( 4 )
anims/fidget = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk_l = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -32, 0 )
transform/scale = Vector2( 2.80952, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0


